--- a/src/main/resources/templates/association_main.html
+++ b/src/main/resources/templates/association_main.html
@@ -34,6 +34,7 @@
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
                 <li class="layui-nav-item"><a id="association_change_filter">更改筛选条件</a></li>
                 <li class="layui-nav-item"><a id="association_import_scores">导入选拔赛成绩</a></li>
+                <li class="layui-nav-item"><a id="association_show_excel">显示红名单</a></li>
             </ul>
         </div>
     </div>
