--- a/src/main/resources/templates/association_change_filter.html
+++ b/src/main/resources/templates/association_change_filter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>修改密码</title>
+    <title>更改筛选条件</title>
     <link rel="stylesheet" href="/css/layui.css" media="all">
     <script src="/layui.js"></script>
     <script src="/jquery-3.4.1.js"></script>
