选拔赛成绩展示

--- a/src/main/resources/templates/teacher/admin.html
+++ b/src/main/resources/templates/teacher/admin.html
@@ -52,6 +52,7 @@
               <dd><a id="ccfEvent">考试信息</a></dd>
               <dd><a id="studentEvent">学生信息</a></dd>
               <dd><a id="gradeEvent">成绩信息</a></dd>
+              <dd><a id="rankEvent">选拔赛成绩</a></dd>
               <dd><a id="scoreAnalysis">成绩分析</a></dd>
             </dl>
           </li>
