--- a/src/main/resources/templates/student/ChangeImformation.html
+++ b/src/main/resources/templates/student/ChangeImformation.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="/css/layui.css">
     <script src="/jquery-3.4.1.js"></script>
 </head>
+<style>
+    html {
+        width: 100%;
+        height: 100%;
+    }
+
+    body {
+        width: 100%;
+        height: 100%;
+        background-color: #F2F2F2;
+    }
+
+</style>
 <body class="layui-layout-body">
 <div class="page">
     <div class="little-header">
