--- a/src/main/resources/templates/student/SubScore.html
+++ b/src/main/resources/templates/student/SubScore.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="/css/layui.css">
     <script src="/jquery-3.4.1.js"></script>
 </head>
+<style>
+    html {
+        width: 100%;
+        height: 100%;
+    }
+
+    body {
+        width: 100%;
+        height: 100%;
+        background-color: #F2F2F2;
+    }
+
+</style>
 <body class="layui-layout-body">
 <div class="page">
     <div class="little-header">
@@ -22,7 +35,7 @@
 
                         <div class="layui-form-item" >
                             <label class="layui-form-label">认证场次</label>
-                            <div class="layui-input-inline" style="width: 120px;">
+                            <div class="layui-input-inline" style="width: 160px;">
                                 <input type="text" name="eid" id="eid" placeholder="请输入" autocomplete="off"
                                        class="layui-input"lay-verify="number1">
                             </div>
@@ -31,7 +44,7 @@
 
                         <div class="layui-form-item" >
                             <label class="layui-form-label">总得分</label>
-                            <div class="layui-input-inline" style="width: 120px;">
+                            <div class="layui-input-inline" style="width: 160px;">
                                 <input type="text" name="grades" id="grades" placeholder="请输入" autocomplete="off"
                                        class="layui-input"lay-verify="number2">
                             </div>
@@ -40,7 +53,7 @@
 
                         <div class="layui-form-item" >
                             <label class="layui-form-label">题目1</label>
-                            <div class="layui-input-inline" style="width: 120px;">
+                            <div class="layui-input-inline" style="width: 160px;">
                                 <input type="text" name="gradesProblem1" id="gradesProblem1" placeholder="请输入" autocomplete="off"
                                        class="layui-input"lay-verify="number2">
                             </div>
@@ -49,7 +62,7 @@
 
                         <div class="layui-form-item" >
                             <label class="layui-form-label">题目2</label>
-                            <div class="layui-input-inline" style="width: 120px;">
+                            <div class="layui-input-inline" style="width: 160px;">
                                 <input type="text" name="gradesProblem2" id="gradesProblem2" placeholder="请输入" autocomplete="off"
                                        class="layui-input"lay-verify="number2">
                             </div>
@@ -58,7 +71,7 @@
 
                         <div class="layui-form-item" >
                             <label class="layui-form-label">题目3</label>
-                            <div class="layui-input-inline" style="width: 120px;">
+                            <div class="layui-input-inline" style="width: 160px;">
                                 <input type="text" name="gradesProblem3" id="gradesProblem3" placeholder="请输入" autocomplete="off"
                                        class="layui-input"lay-verify="number2">
                             </div>
@@ -67,7 +80,7 @@
 
                         <div class="layui-form-item" >
                             <label class="layui-form-label">题目4</label>
-                            <div class="layui-input-inline" style="width: 120px;">
+                            <div class="layui-input-inline" style="width: 160px;">
                                 <input type="text" name="gradesProblem4" id="gradesProblem4" placeholder="请输入" autocomplete="off"
                                        class="layui-input"lay-verify="number2">
                             </div>
@@ -76,7 +89,7 @@
 
                         <div class="layui-form-item" >
                             <label class="layui-form-label">题目5</label>
-                            <div class="layui-input-inline" style="width: 120px;">
+                            <div class="layui-input-inline" style="width: 160px;">
                                 <input type="text" name="gradesProblem5" id="gradesProblem5" placeholder="请输入" autocomplete="off"
                                        class="layui-input"lay-verify="number2">
                             </div>
@@ -91,12 +104,6 @@
                             </div>
                             <div class="layui-form-mid layui-word-aux">请上传PDF凭证</div>
                         </div>
-
-
-<!--                        <button type="button" class="layui-btn" id="test3">-->
-<!--                            <i class="layui-icon"></i>上传文件-->
-<!--                        </button>-->
-<!--                        <input type="hidden" id="url" name="pdf" value=""/>-->
 
 
 
@@ -157,24 +164,6 @@
             });
         });
 
-        // form.on('submit(reg)', function (FormData) {
-        //     var eid =$('#eid').val();
-        //     var grades =$('#grades').val();
-        //     var gradesProblem1 =$('#gradesProblem1').val();
-        //     var gradesProblem2 =$('#gradesProblem2').val();
-        //     var gradesProblem3 =$('#gradesProblem3').val();
-        //     var gradesProblem4 =$('#gradesProblem4').val();
-        //     var gradesProblem5 =$('#gradesProblem5').val();
-        //     var file =$('#file')[0].files[0];
-        //     $.post("/api/json/add_grades_for_review", $("#formData").serialize(),function (data) {
-        //         if (data.code===200) {
-        //             layer.msg('提交成功', {icon: 1, time: 1000});
-        //         } else {
-        //             layer.msg(data.message, {icon: 5, time: 1000});
-        //         }
-        //     });
-        //     return false;
-        // });
         //自定义验证规则
         form.verify({
             number1: function(e) {
@@ -192,27 +181,6 @@
         var $ = layui.jquery
             ,upload = layui.upload;
 
-        // upload.render({
-        //     elem: '#test3'
-        //     ,title:'PDF凭证'
-        //     ,url: '/test/student/upload'
-        //     ,accept: 'file'
-        //     ,exts:'pdf'
-        //     ,before: function(obj){
-        //         //预读本地文件示例，不支持ie8
-        //         obj.preview(function(index, file, result){
-        //             $('#demo1').attr('src', result); //图片链接（base64）
-        //         });
-        //     }
-        //     ,done: function(res){
-        //         if(res.code==200){
-        //             layer.msg("上传成功");
-        //         }else
-        //         {
-        //             layer.msg(res.message);
-        //         }
-        //     }
-        // });
 
     });
 </script>
