修复了一些bug

--- a/src/main/resources/templates/student/Student.html
+++ b/src/main/resources/templates/student/Student.html
@@ -15,9 +15,10 @@
 
         <ul class="layui-nav layui-layout-right" lay-filter="user">
             <li class="layui-nav-item">
-                <a href="javascript:">
+
+                <a name="name" href="javascript:">
                     <img src="/images/student/njust.jpg" class="layui-nav-img">
-                    学生
+
                 </a>
                 <dl class="layui-nav-child">
                     <dd><a id="changePassword" >修改密码</a></dd>
@@ -65,9 +66,9 @@
                 src="ChangeImformation"></iframe>
 
 
-        <div class="layui-footer">
-            软件项目管理第7组
-        </div>
+        <div class="layui-footer" style="text-align: center;">
+            <!-- 底部固定区域 -->
+            © 软件项目管理7组
     </div>
 </div>
     <script src="/layui.js"></script>
@@ -97,7 +98,14 @@
             });
         });
 
+        $.get("/api/json/all_info", function (res) {
+            if (res.code == 200) {
+                $('a[name="name"]').append(res.data.name);
+            } else {
+                layer.msg(res.message);
+            }
 
+        });
     </script>
 </body>
 </html>
