修改小错误

--- a/src/main/resources/templates/teacher/rankEvent.html
+++ b/src/main/resources/templates/teacher/rankEvent.html
@@ -93,10 +93,19 @@
                                 checkbox: true,
                                 fixed: true
                             },{
-                            field: 'idNo',
-                            title: '身份证号',
+                            field: 'studentId',
+                            title: '姓名',
+                            sort: true
+                        },{
+                            field: 'name',
+                            title: '姓名',
                             sort: true
                         },
+                            {
+                                field: 'idNo',
+                                title: '身份证号',
+                                sort: true
+                            },
                             {
                                 field: 'rankNo',
                                 title: '选拔赛排名',
