修改小错误

--- a/src/main/resources/templates/teacher/scoreAnalysis.html
+++ b/src/main/resources/templates/teacher/scoreAnalysis.html
@@ -61,13 +61,13 @@
                             <div class="layui-form-item">
                                 <label class="layui-form-label" style="width: auto">最低分</label>
                                 <div class="layui-input-inline" style="width: 360px">
-                                    <input name="minGrades" id="minGrades" class="layui-input" lay-verify="number">
+                                    <input  type="text" name="minGrades" id="minGrades" class="layui-input" lay-verify="number">
                                 </div>
                             </div>
                             <div class="layui-form-item">
                                 <label class="layui-form-label" style="width: auto">最高分</label>
                                 <div class="layui-input-inline" style="width: 360px">
-                                    <input name="maxGrades" id="maxGrades" class="layui-input" lay-verify="number">
+                                    <input  type="text" name="maxGrades" id="maxGrades" class="layui-input" lay-verify="number">
                                 </div>
                             </div>
                             <div class="layui-form-item" style="padding-left: 15px">
