--- a/src/main/resources/templates/teacher/studentImport.html
+++ b/src/main/resources/templates/teacher/studentImport.html
@@ -30,7 +30,7 @@
         <button type="button" class="layui-btn" id="test1">
             <i class="layui-icon">&#xe67c;</i>上传名单
         </button>
-        <a href="/download/studentImport.xls" download="学生导入模板.xls" class="layui-btn">下载模版</a>
+        <a href="/download/studentImport.xlsx" download="学生导入模板.xlsx" class="layui-btn">下载模版</a>
     </div>
     <div style="margin-top: 20px">
         <form id="dataUpload">
