replace the eid with examNo if in the response

--- a/src/main/resources/templates/student/SeeApplication.html
+++ b/src/main/resources/templates/student/SeeApplication.html
@@ -83,7 +83,12 @@
                     },
                     {
                         field: 'aid',
-                        title: '批次',
+                        title: '序号',
+                        sort: true
+                    },
+                    {
+                        field: 'examNo',
+                        title: 'CCF批次',
                         sort: true
                     },
                     {
