--- a/src/main/resources/templates/student/SelectionList.html
+++ b/src/main/resources/templates/student/SelectionList.html
@@ -49,7 +49,7 @@
             type: 'get',
             success: function (res) {
                 $.each(res.data, function (index, item) {
-                    var text="场次:"+item.eid ;
+                    var text="场次:"+item.examNo ;
                     $('#eid').append(new Option(text, item.eid));// 下拉菜单里添加元素
                 });
                 layui.form.render("select");
