--- a/src/main/resources/templates/student/SubApplication.html
+++ b/src/main/resources/templates/student/SubApplication.html
@@ -86,7 +86,7 @@
             type: 'get',
             success: function (res) {
                 $.each(res.data, function (index, item) {
-                    var text="场次:"+item.eid ;
+                    var text="场次:"+item.examNo ;
                     $('#examNo').append(new Option(text, item.eid));// 下拉菜单里添加元素
                 });
                 layui.form.render("select");
