Updated web application.

--- a/src/main/resources/templates/student/SubApplication.html
+++ b/src/main/resources/templates/student/SubApplication.html
@@ -50,8 +50,7 @@
                         <div class="layui-form-item layui-col-md6 layui-col-md-offset3" >
                             <label class="layui-form-label">申请批次</label>
                             <div class="layui-input-block"style="width: 120px;">
-                                <select id="eid" name="eid" lay-filter="*" class="select">
-                                    <option value=""></option>
+                                <select id="eid" name="eid" lay-filter="*" class="select" required lay-verify="required">
                                 </select>
                             </div>
                         </div>
@@ -86,8 +85,10 @@
             type: 'get',
             success: function (res) {
                 $.each(res.data, function (index, item) {
-                    var text="场次:"+item.examNo ;
-                    $('#eid').append(new Option(text, item.eid));// 下拉菜单里添加元素
+                    var text="场次:"+item.examNo +"  开始时间:"+ item.examTime.slice(0,10)+" "+ item.examTime.slice(11,19);
+                    var newElem = new Option(text, item.eid);
+                    newElem.disabled = !item.canApply;
+                    $('#eid').append(newElem);// 下拉菜单里添加元素
                 });
                 layui.form.render("select");
             }
