解决了前端显示的一点小问题

--- a/src/main/resources/templates/student/Student.html
+++ b/src/main/resources/templates/student/Student.html
@@ -15,8 +15,7 @@
 
         <ul class="layui-nav layui-layout-right" lay-filter="user">
             <li class="layui-nav-item">
-
-                <a name="name" id="name" >
+                <a name="name">
                     <img src="/images/student/njust.jpg" class="layui-nav-img">
                 </a>
                 <dl class="layui-nav-child">
