--- a/src/main/resources/templates/student/CCFscore.html
+++ b/src/main/resources/templates/student/CCFscore.html
@@ -73,7 +73,7 @@
                         fixed: true
                     },
                     {
-                        field: 'eid',
+                        field: 'examNo',
                         title: '批次',
                         sort: true
                     }, {
